--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="input-box">
                 <input type="text" id="caixa-texto">
                 <i class="fa-solid fa-magnifying-glass icone"></i>
-                <button>Buscar</button>
+                <button id="buscar">Buscar</button>
             </div>
         </div>
         <div class="container-fotos" id="container">
