--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
                 <h1>DOG API</h1>
                 <i class="fa-solid fa-dog icon"></i>
             </div>
-            
-            <div class="input-box">
-                <input type="text" id="caixa-texto">
-                <i class="fa-solid fa-magnifying-glass icone"></i>
+            <div class="pesquisa">
+                <div class="input-box">
+                    <input type="text" id="caixa-texto">
+                    <i class="fa-solid fa-magnifying-glass icon"></i>
+                </div>
                 <button id="buscar">Buscar</button>
             </div>
+
         </div>
         <div class="container-fotos" id="container">
             <!-- <div class="foto"> -->
-              
-            </div>
+
         </div>
+    </div>
     </div>
 </body>
 
